# ai-vocab

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/endpoints/: bookmarks.py  user_settings.py  users.py  wordbooks.py  words.py
backend/app/core/: firebase.py  security.py
backend/app/schemas/: bookmarks.py  search.py  user_settings.py  users.py  wordbooks.py  words.py
backend/app/services/: user_settings.py  users.py  words.py
dictionary_builder/: Dockerfile  README.md  build_database.py  pyproject.toml
dictionary_builder/parsers/: supplement_parser.py  wordnet_parser.py
ec2-deployment/: README.md  docker-compose.prod.yml
ec2-deployment/nginx/: nginx.conf
frontend/: .dockerignore  Dockerfile.dev  Dockerfile.prod  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(main)/: layout.tsx  page.tsx
frontend/src/app/health/: route.ts
frontend/src/components/: AudioPlayButton.tsx  CardViewer.tsx  DarkMode.tsx  DropdownMenu.tsx  Header.tsx  Loading.tsx  WordBookList.tsx  WordItem.tsx  WordList.tsx
frontend/src/components/addCardForm/: AddCardForm.tsx  CardEditForm.tsx  EditFormCore.tsx  ExampleSentenceEditor.tsx  SynonymEditor.tsx
frontend/src/components/cardForm/: AddCardForm.tsx  DefinitionEditor.tsx  EditFormCore.tsx  ExampleSentenceEditor.tsx  SynonymEditor.tsx  UpdateCardForm.tsx
frontend/src/components/forms/: SignInForm.tsx  SignUpForm.tsx
frontend/src/components/wordBook/: CreateDeck.tsx  DeckFormModal.tsx  DeckItem.tsx  DeckList.tsx  DuplicateDeck.tsx  EditDeck.tsx  WordbookCard.tsx  WordbookEmptyState.tsx  WordbookFilters.tsx  WordbookGrid.tsx  WordbookHeader.tsx  WordbookSearchBar.tsx  WordbookTabs.tsx
frontend/src/constants/: menuItems.tsx
frontend/src/hooks/: useAuth.ts  useMenuItems.ts
frontend/src/lib/api/: bookmarks.ts  card.ts  db.ts  user.ts
frontend/src/lib/firebase/: auth.ts  (+1 more)
frontend/src/stores/: bookmarkStore.ts  deckStore.ts  userSettingsStore.ts  userStore.ts
frontend/src/types/: index.ts
nginx/: nginx.conf
(+11 files in other folders)
