[tool.poetry]
name = "dictionary_builder"
version = "0.1.0"
description = ""
authors = ["Yuri Kuniyoshi <e235750@ie.u-ryukyu.ac.jp>"]
readme = "README.md"

packages = [
    { include = "app" }
]


[tool.poetry.dependencies]
python = ">=3.13,<3.14"
firebase-admin = "^6.0.0"
nltk = "^3.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"